# kip

./: .gitignore  KIP.MD  README.md  config.example.yaml  pyproject.toml
examples/: mcp_server.py
examples/skill_echo/: echo_tools.py  skill.json
src/kip/: __init__.py  agent.py  banner.py  branding.py  cli.py  config.py  dev_md.py  dev_md_ingest.py  emitter.py  exit_summary.py  first_run.py  llm_client.py  log_setup.py  main.py  memory.py  memory_extract.py  model_selector.py  paths.py  pixel_kip.py  repl_cancel.py  repl_common.py  repl_completer.py  repl_help.py  safety.py  soul.py
src/kip/mcp/: __init__.py  client.py
src/kip/skills/: __init__.py  install.py  loader.py  manifest.py
src/kip/tools/: __init__.py  applescript.py  base.py  browser.py  file_io.py  shell_exec.py  skill_hub.py  weather.py
tests/: conftest.py  test_agent_tools.py  test_config_and_imports.py  test_first_run.py  test_llm_helpers.py  test_memory_store.py  test_paths.py  test_pixel_kip.py  test_repl_completer.py  test_safety_prompt.py  test_skills_pipeline.py  test_soul.py  test_tools_builtin.py
